--- a/Hippocampus/Views/HippocampusWindow.axaml
+++ b/Hippocampus/Views/HippocampusWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="Hippocampus.Views.MainWindow"
+        x:Class="Hippocampus.Views.HippocampusWindow"
         Icon="/Assets/avalonia-logo.ico"
         Width="800" Height="300"
         Title="Hippocampus"
