--- a/Hippocampus/Views/MainView.axaml
+++ b/Hippocampus/Views/MainView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="300"
-             x:Class="Hippocampus.Views.CoderView">
+             x:Class="Hippocampus.Views.MainView">
 	<StackPanel>
 		<TextBox AcceptsReturn="False"
 				 Text="{Binding FilePath}"
