Added option 'write output to file'

--- a/Hippocampus/Views/MainView.axaml
+++ b/Hippocampus/Views/MainView.axaml
@@ -4,15 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="300"
              x:Class="Hippocampus.Views.MainView">
-	<StackPanel>
-		<TextBox AcceptsReturn="False"
-				 Text="{Binding FilePath}"
-				 Watermark="File path"/>
-		<TextBox AcceptsReturn="False"
-				 Text="{Binding Key}"
-				 Watermark="Key"
-				 PasswordChar="*"/>
+	<StackPanel Spacing="10">
+		<TextBox AcceptsReturn="False" Text="{Binding FilePath}" Watermark="File path"/>
+		<TextBox AcceptsReturn="False" Text="{Binding Key}" Watermark="Key" PasswordChar="*"/>
+		<StackPanel Orientation="Horizontal" Spacing="20">
+			<RadioButton IsChecked="True" GroupName="Output" Content="Show" Command="{Binding LabelSelected}"/>
+			<RadioButton GroupName="Output" Content="Write into file" Command="{Binding FileSelected}"/>
+		</StackPanel>
 		<Button Command="{Binding Launch}">Launch</Button>
-		<TextBlock Text="{Binding Output}" TextWrapping="Wrap"/>
+		<TextBlock Text="{Binding LabelOutput}" TextWrapping="Wrap"/>
 	</StackPanel>
 </UserControl>
