--- a/Hippocampus/Views/ImageView.axaml
+++ b/Hippocampus/Views/ImageView.axaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="400"
              x:Class="Hippocampus.Views.ImageView">
+	
 	<StackPanel>
-		<Image Width="400" Height="400" Source="C:\Tima\Scripti\Hippocampus\Hippocampus\TestImage.png"/>
+		<Image Source="{Binding Image}"/>
+		<TextBlock Text="{Binding Source}"/>
 	</StackPanel>
 </UserControl>
