--- a/Hippocampus/Views/MainWindow.axaml
+++ b/Hippocampus/Views/MainWindow.axaml
@@ -1,10 +1,10 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="300"
-             x:Class="Hippocampus.Views.MainView">
-	<StackPanel Spacing="10">
+<Window xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        x:Class="Hippocampus.Views.MainWindow"
+        Icon="/Assets/avalonia-logo.ico"
+        Width="800" Height="300"
+        Title="Hippocampus">
+    <StackPanel Spacing="10">
 		<TextBox AcceptsReturn="False" Text="{Binding InputPath}" Watermark="Input file path"/>
 		<TextBox AcceptsReturn="False" Text="{Binding Key}" Watermark="Key" PasswordChar="*"/>
 		<StackPanel Orientation="Horizontal" Spacing="20">
@@ -19,4 +19,4 @@
 		<Button Command="{Binding Launch}">Launch</Button>
 		<TextBlock Text="{Binding LabelOutput}" TextWrapping="Wrap"/>
 	</StackPanel>
-</UserControl>
+</Window>
