--- a/Hippocampus/Views/ImageWindow.axaml
+++ b/Hippocampus/Views/ImageWindow.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Hippocampus.Views.ImageWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Width="800" Height="300"
+        Width="{Binding Width}" Height="{Binding Height}"
         Title="Hippocampus Image">
 	<StackPanel>
 		<Image Source="{Binding Image}" />
