--- a/Hippocampus/Views/MainWindow.axaml
+++ b/Hippocampus/Views/MainWindow.axaml
@@ -3,19 +3,29 @@
         x:Class="Hippocampus.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Width="800" Height="300"
-        Title="Hippocampus">
+        Title="Hippocampus"
+		CanResize="False">
     <StackPanel Spacing="10">
-		<TextBox AcceptsReturn="False" Text="{Binding InputPath}" Watermark="Input file path"/>
+		<DockPanel>
+			<Button Content="Browse" DockPanel.Dock="Right" Command="{Binding BrowseInput}"/>
+			<TextBox AcceptsReturn="False" Text="{Binding InputPath}" Watermark="Input file path"/>
+		</DockPanel>
 		<TextBox AcceptsReturn="False" Text="{Binding Key}" Watermark="Key" PasswordChar="*"/>
+		
 		<StackPanel Orientation="Horizontal" Spacing="20">
 			<RadioButton IsChecked="True" GroupName="Output" Content="Show" Command="{Binding OutputSelected}" CommandParameter="ShowByLabel"/>
 			<RadioButton GroupName="Output" Content="Write into file" Command="{Binding OutputSelected}" CommandParameter="WriteToFile"/>
 		</StackPanel>
+		
 		<StackPanel Orientation="Horizontal" Spacing="20">
 			<RadioButton IsChecked="True" GroupName="Type" Content="Text" Command="{Binding TypeSelected}" CommandParameter="Text"/>
 			<RadioButton GroupName="Type" Content="Image" Command="{Binding TypeSelected}" CommandParameter="Image"/>
 		</StackPanel>
-		<TextBox AcceptsReturn="False" Text="{Binding OutputPath}" Watermark="Output file path"/>
+		
+		<DockPanel>
+			<Button Content="Browse" DockPanel.Dock="Right" Command="{Binding BrowseOutput}"/>
+			<TextBox AcceptsReturn="False" Text="{Binding OutputPath}" Watermark="Output file path"/>
+		</DockPanel>
 		<Button Command="{Binding Launch}">Launch</Button>
 		<TextBlock Text="{Binding LabelOutput}" TextWrapping="Wrap"/>
 	</StackPanel>
