--- a/Hippocampus/Views/MainWindow.axaml
+++ b/Hippocampus/Views/MainWindow.axaml
@@ -13,13 +13,9 @@
 		<TextBox AcceptsReturn="False" Text="{Binding Key}" Watermark="Key" PasswordChar="*"/>
 		
 		<StackPanel Orientation="Horizontal" Spacing="20">
-			<RadioButton IsChecked="True" GroupName="Output" Content="Show" Command="{Binding OutputSelected}" CommandParameter="ShowByLabel"/>
-			<RadioButton GroupName="Output" Content="Write into file" Command="{Binding OutputSelected}" CommandParameter="WriteToFile"/>
-		</StackPanel>
-		
-		<StackPanel Orientation="Horizontal" Spacing="20">
 			<RadioButton IsChecked="True" GroupName="Type" Content="Text" Command="{Binding TypeSelected}" CommandParameter="Text"/>
 			<RadioButton GroupName="Type" Content="Image" Command="{Binding TypeSelected}" CommandParameter="Image"/>
+			<RadioButton GroupName="Type" Content="File" Command="{Binding TypeSelected}" CommandParameter="File"/>
 		</StackPanel>
 		
 		<DockPanel>
