Added 'OutputFormat' class

--- a/Hippocampus/Views/MainWindow.axaml
+++ b/Hippocampus/Views/MainWindow.axaml
@@ -9,7 +9,7 @@
     <StackPanel Spacing="10">
 		<DockPanel>
 			<Button Content="Browse" DockPanel.Dock="Right" Command="{Binding BrowseInput}"/>
-			<TextBox AcceptsReturn="False" Text="{Binding InputPath}" Watermark="Input file path"/>
+			<TextBox AcceptsReturn="False" Text="{Binding InputPathText}" Watermark="Input file path"/>
 		</DockPanel>
 		<TextBox AcceptsReturn="False" Text="{Binding Key}" Watermark="Key" PasswordChar="*"/>
 		
@@ -21,7 +21,7 @@
 		
 		<DockPanel>
 			<Button Content="Browse" DockPanel.Dock="Right" Command="{Binding BrowseOutput}"/>
-			<TextBox AcceptsReturn="False" Text="{Binding OutputPath}" Watermark="Output file path"/>
+			<TextBox AcceptsReturn="False" Text="{Binding OutputPathText}" Watermark="Output file path"/>
 		</DockPanel>
 		<Button Command="{Binding Launch}">Launch</Button>
 		<TextBlock Text="{Binding LabelOutput}" TextWrapping="Wrap"/>
