--- a/Hippocampus/Views/ImageWindow.axaml
+++ b/Hippocampus/Views/ImageWindow.axaml
@@ -1,7 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Hippocampus.Views.ImageWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/AkashaIcon.ico"
         Width="400" Height="400"
         Title="Hippocampus Image">
 	<StackPanel>
