--- a/Hippocampus/Views/ImageWindow.axaml
+++ b/Hippocampus/Views/ImageWindow.axaml
@@ -2,9 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Hippocampus.Views.ImageWindow"
         Icon="/Assets/AkashaIcon.ico"
-        Width="400" Height="400"
         Title="Hippocampus Image">
-	<StackPanel>
-		<Image Source="{Binding Image}" />
-	</StackPanel>
+	<Image Source="{Binding Image}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 </Window>
